<resources>
    <string name="app_name">Lecpad</string>
    <string name="create">New</string>
    <string name="score">Score</string>
    <string name="students">Students</string>
    <string name="title">Title</string>
    <string name="attachment">Attachment</string>
    <string name="hello_world">Hello world!</string>
    <string name="sendto">User</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="us">Username</string>
    <string name="pw">Password</string>
    <string name="login">Login</string>
    <string name="ok">Okay</string>
    <string name="preview">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="notif">http://highoctane-restobar.com/lecpad/notificationlist.php</string>
    <string name="msg">http://highoctane-restobar.com/lecpad/cpmessage.php</string>
    <string name="siteurl">http://www.highoctane-restobar.com/lecpad/auth.php</string>
    <string name="webview">http://www.highoctane-restobar.com/lecpad/webview.php</string>
    <string name="docs">http://www.highoctane-restobar.com/lecpad/docs</string>
    <string name="googledocs">https://docs.google.com/gview?embedded=true&amp;url=</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string-array name="studentmenu">
        <item>Library</item>
        <item>Subjects</item>
        <item>Messages</item>
        <item>Notification</item>
        <item>Logout</item>
    </string-array>
    <string-array name="facultymenu">
        <item>Subjects</item>
        <item>Messages</item>
        <item>Notification</item>
        <item>Logout</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>

    </array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="user_login_key">user</string>
    <string name="user_login_default">User</string>

    <string name="content_authority">com.spruk.lecpad</string>

</resources>
