<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/us"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:text="asdasd" />


    <EditText
        android:id="@+id/us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pw"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/us"
        android:inputType="text"
        android:text="asdasd">

        <requestFocus />
    </EditText>

</RelativeLayout>