<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/title"
        android:id="@+id/title"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:hint=""
        android:id="@+id/content"
        android:singleLine="false"
        android:gravity="top" />
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ok"/>
        <Button
            android:id="@+id/btnpreview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/preview"/>
    </LinearLayout>

</LinearLayout>